tweak(Tinebase): prevent flickerig of split btn witdth on mouseover
Reviewed-on: http://gerrit.tine20.com/customers/13933
Tested-by: Cornelius Weiss <c.weiss@metaways.de>

--- a/tine20/Tinebase/css/flat.less
+++ b/tine20/Tinebase/css/flat.less
@@ -157,19 +157,20 @@ ul.x-tab-strip-top {
 
 #button(@dialogBg);
 
+.x-toolbar .x-btn-mc em.x-btn-split .x-btn-text {
+  border-right: 1px solid transparent;
+}
+
 .x-toolbar .x-btn-over .x-btn-mc em.x-btn-split,
 .x-toolbar .x-btn-click .x-btn-mc em.x-btn-split,
 .x-toolbar .x-btn-menu-active .x-btn-mc em.x-btn-split,
 .x-toolbar .x-btn-pressed .x-btn-mc em.x-btn-split {
   background-image: url('../../images/icon-set/icon_arrow_down.svg');
   background-size: 12px;
-}
 
-.x-toolbar .x-btn-over .x-btn-mc em.x-btn-split .x-btn-text,
-.x-toolbar .x-btn-click .x-btn-mc em.x-btn-split .x-btn-text,
-.x-toolbar .x-btn-menu-active .x-btn-mc em.x-btn-split .x-btn-text,
-.x-toolbar .x-btn-pressed .x-btn-mc em.x-btn-split .x-btn-text {
-  border-right: 1px dotted;
+  .x-btn-text {
+    border-right: 1px dotted;
+  }
 }
 
 .x-btn-mc em.x-btn-arrow,
@@ -521,6 +522,7 @@ td.x-grid3-hd-over, td.sort-asc, td.sort-desc {
 
 .x-date-middle .x-btn-mc em.x-btn-arrow button {
   margin-right: 2px;
+  border-right: 1px solid transparent;
 
   &:hover {
     border-right: 1px dotted;
